// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipIcon should allow the user to specify the direction 1`] = `
<TooltipIcon
  align="center"
  className="custom-class"
  direction="top"
  tooltipText="tooltip text"
>
  <div
    className="bx--tooltip--icon custom-class"
  >
    <button
      aria-describedby="definition-tooltip-2"
      aria-label="tooltip text"
      className="bx--tooltip__trigger bx--tooltip--top bx--tooltip--align-center"
    >
      <svg />
    </button>
  </div>
</TooltipIcon>
`;

exports[`TooltipIcon should render 1`] = `
<TooltipIcon
  align="center"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
>
  <div
    className="bx--tooltip--icon custom-class"
  >
    <button
      aria-describedby="definition-tooltip-1"
      aria-label="tooltip text"
      className="bx--tooltip__trigger bx--tooltip--bottom bx--tooltip--align-center"
    >
      <svg />
    </button>
  </div>
</TooltipIcon>
`;
